--- a/tripplanner.ui
+++ b/tripplanner.ui
@@ -1322,7 +1322,7 @@ selection-background-color: rgb(225, 225, 225);</string>
       <set>Qt::AlignCenter</set>
      </property>
      <property name="readOnly">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QPushButton" name="view_auto_select_pushButton">
